[workspace]
members = [
    "macros/ntex-error-macro",
    "macros/redis-cache-macro",
    "macros/sqlx-macro",
    "shl-ntex",
    "shl-observability",
    "shl-redis-cache-service",
    "shl-sqlx",
]
resolver = "3"

[workspace.package]
edition = "2024"
publish = false

[workspace.dependencies]
cfg-if = "1"
