[package]
name = "shl-redis-cache-service"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[features]
macro = ["dep:redis-cache-macro"]
rustis = ["dep:rustis"]

[dependencies]
async-trait = "0.1"
rustis = { version = "0.16", optional = true }
serde = "1"
serde_json = "1"
redis-cache-macro = { path = "../macros/redis-cache-macro", optional = true }
thiserror = "2"
