[package]
name = "shl-service-cache"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
shl-service-cache-macro = { path = "../shl-service-cache-macro", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustis = "0.13"
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1.45", default-features = false, features = ["rt-multi-thread"] }

[features]
macro = ["dep:shl-service-cache-macro"]