[package]
name = "shl-service-cache"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
shl-service-cache-macro = { path = "../shl-service-cache-macro", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustis = "0.15"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"] }

[features]
macro = ["dep:shl-service-cache-macro"]