[package]
name = "shl-service-cache"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[features]
macro = ["dep:shl-service-cache-macro"]

[dependencies]
rustis = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shl-service-cache-macro = { path = "../shl-service-cache-macro", optional = true }
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"] }
