[package]
name = "shl-sqlx"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[features]
postgres = ["sqlx/postgres"]
uuid = ["dep:chrono", "dep:once_cell", "dep:uuid"]

[dependencies]
chrono = { version = "0.4", optional = true }
once_cell = { version = "1", optional = true }
serde_json = "1"
sqlx = "0.8"
uuid = { version = "1", features = ["v7"], optional = true }