[package]
name = "shl-sqlx"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[features]
postgres = ["sqlx/postgres", "dep:serde_json", "dep:sqlx-macro"]
uuid = ["dep:chrono", "dep:once_cell", "dep:uuid"]

[dependencies]
chrono = { version = "0.4", optional = true }
once_cell = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
sqlx = "0.8"
sqlx-macro = { path = "../macros/sqlx-macro", optional = true }
thiserror = "2.0.12"
uuid = { version = "1", features = ["v7"], optional = true }

[dev-dependencies]
sqlx = { version = "0.8", features = ["chrono", "postgres", "uuid", "runtime-tokio-native-tls"] }
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "postgres_crud"
harness = false
